translate and about page

--- a/langs/fr_FR/uniqueproductstate.lang
+++ b/langs/fr_FR/uniqueproductstate.lang
@@ -16,18 +16,19 @@
 #
 # Générique
 #
+ATMAbout = Ce module a été développé par <a href="http://www.atm-consulting.fr" target="_blank">ATM Consulting</a><br>Vous pouvez retrouver la documentation sur notre <a href="http://wiki.atm-consulting.fr/index.php/Accueil" target="_blank">wiki</a><br><br>Pour toute question technique ou retour, contactez-nous sur <a href="mailto:support@atm-consulting.fr">support@atm-consulting.fr</a><br><br>Pour toute question commerciale, contactez-nous sur <a href="mailto:contact@atm-consulting.fr">contact@atm-consulting.fr</a> ou au +33 9 77 19 50 70<br><br>Retrouvez nos autres modules sur <a href="http://www.dolistore.com/search.php?orderby=position&orderway=desc&search_query=atm&submit_search=Rechercher" target="_blank">Dolistore</a>
 
 # Module label 'ModuleUniqueProductStateName'
-ModuleUniqueProductStateName = UniqueProductState
+ModuleUniqueProductStateName = Etat des lieux de produits
 # Module description 'ModuleUniqueProductStateDesc'
 ModuleUniqueProductStateDesc = Description de UniqueProductState
 
 #
 # Page d'administration
 #
-UniqueProductStateSetup = Configuration du module UniqueProductState
+UniqueProductStateSetup = Configuration du module Etat des lieux de produits
 Settings = Réglages
-UniqueProductStateSetupPage = Page de configuration du module UniqueProductState
+UniqueProductStateSetupPage = Page de configuration du module Etat des lieux de produits
 
 #
 # Page À propos
@@ -46,6 +47,13 @@ MyPageName = Nom de ma page
 #
 MyWidget = Mon widget
 MyWidgetDescription = Description de mon widget
+
+#
+# Rights
+#
+uniqueproductstate_read=Voir un état des lieux de produits sérialisés
+uniqueproductstate_write=Créer/Mettre à jour un état des lieux de produits sérialisés
+uniqueproductstate_delete=Supprimer un état des lieux de produits sérialisés
 
 #
 # States
